Added header and menu.

--- a/dev/index.html
+++ b/dev/index.html
@@ -3,17 +3,80 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE = edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1,user-scalable=no">
     <meta name="keywords" content="">
+    <meta name="author" content="Chupakhin Andrey">
     <link rel="stylesheet" type="text/css" href="static/fonts/fonts.css">
+    <link rel="stylesheet" type="text/css" href="static/css/libs.min.css">
     <link rel="stylesheet" type="text/css" href="static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="static/css/media.css">
     <title>Главная страница
     </title>
   </head>
-  <body>
-    <div class="wrapper">
+  <body><!--[if lt IE 8]>
+    <p class="browsehappy">
+      You are using an <strong>outdated</strong> browser.
+      Please <a href="http://browsehappy.com">upgrade your browser</a>
+      to improve your experience.
+    </p><![endif]-->
+    <div class="top_block-wrap">
+      <div class="top-block">
+        <ul class="top_social-link">
+          <li><a class="top_social-link_vk" href="javascript:void(0);"></a></li>
+          <li><a class="top_social-link_mail" href="javascript:void(0);"></a></li>
+          <li><a class="top_social-link_fb" href="javascript:void(0);"></a></li>
+          <li><a class="top_social-link_tm" href="javascript:void(0);"></a></li>
+          <li><a class="top_social-link_inst" href="javascript:void(0);"></a></li>
+          <li><a class="top_social-link_yadisk" href="javascript:void(0);"></a></li>
+          <li><a class="top_social-link_youtube" href="javascript:void(0);"></a></li>
+        </ul>
+        <div class="top_btn"><a class="btn btn_white" href="javascript:void(0);">Регистрация</a><a class="btn btn_white" href="javascript:void(0);">Вход</a></div>
+      </div>
     </div>
-    <script src="static/js/jquery.js"></script>
+    <div class="wrapper">
+      <header>
+        <div class="header_top">
+          <div class="header_logo"><a href="javascript:void(0);">obraz-donor.ru</a><span>бег и донорство</span></div>
+          <div class="header_address">
+            <div class="header_address_top"><a class="header_phone" href="tel:=74951234567">+7 495 <span>123 4567</span></a><a class="btn btn_orange" href="javascript:void(0);">обратный звонок</a></div>
+            <div class="header_address_bottom"><span>Москва, ул. Ленинские Горы 1, стр. 52</span></div>
+          </div>
+          <div class="header_basket_wrap">
+            <div class="header_basket"><span>Корзина пуста, <br> добавьте товар.</span></div><span>—</span><a href="javascript:void(0);">Чем отличаются копии от оригинала?</a>
+          </div>
+        </div>
+        <div class="main_nav-wrap">
+          <nav class="main_nav">
+            <ul>
+              <li><a class="active" href="javascript:void(0);">О фонде</a></li>
+              <li><a href="javascript:void(0);">Акции</a></li>
+              <li><a href="javascript:void(0);">Новости</a></li>
+              <li><a href="javascript:void(0);">Истории</a></li>
+              <li><a href="javascript:void(0);">Помочь</a></li>
+              <li><a href="javascript:void(0);">Партнеры</a></li>
+              <li><a href="javascript:void(0);">Контакты</a></li>
+            </ul>
+          </nav>
+          <div class="top_search-wrap">
+            <input type="text" placeholder="поиск по товарам">
+          </div>
+        </div>
+      </header>
+      <section class="our_advantages">
+        <div class="advantages_item">
+          <div class="advantages_item-inner"><span class="adv_icon adv_icon-registration"></span><span class="adv_name">Забег проводится в Москве</span><a href="javascript:void(0);">Регистрация на забег </a></div>
+        </div>
+        <div class="advantages_item">
+          <div class="advantages_item-inner"><span class="adv_icon adv_icon-price"></span><span class="adv_name">Участие в забеге от 300 рублей</span><a href="javascript:void(0);">Как оплатить</a></div>
+        </div>
+        <div class="advantages_item">
+          <div class="advantages_item-inner"><span class="adv_icon adv_icon-place"></span><span class="adv_name">Возможно удаленное участие</span><a href="javascript:void(0);">Информация</a></div>
+        </div>
+      </section>
+      <div class="test">
+        <p>Lorem</p><span class="icon1"></span><span class="icon2"></span><span class="icon3"></span>
+      </div>
+    </div>
     <script src="static/js/libs.min.js"></script>
     <script src="static/js/main.js"></script>
   </body>
